💄 fix notation z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,7 @@ html.dark {
 .borderBlack {
   @apply border border-black/10;
 }
+
+.rough-annotation {
+  z-index: -1;
+}
